--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-PVVW4QD9");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/code.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <meta
+      name="keywords"
+      content="Reza Heidari, Full Stack Developer, Web Development, Windows Apps, WPF, Healthcare, Insurance, Academic, Startups, Corporations, User-Friendly Applications, Docker, Cloud Services, Arneca Technologies, Mat BioMedical, Asp.Net, CQRS, SQL, Elasticsearch, JavaScript, TypeScript, Angular, React, Next.js, CSS, Linux, Azure, AWS, MVC, Redis, Node JS, WPF Application, MySQL, WordPress, Visual Studio Code, Docker"
+    />
+    <meta
+      name="description"
+      content="Reza Heidari is a Full Stack Software Developer experienced in crafting web applications and Windows Apps. With a background in various fields like healthcare, insurance, and startups, he specializes in both backend and frontend development. His expertise includes technologies such as Asp.Net, React, Angular, Docker, and cloud services. He has worked on significant projects at Arneca Technologies and Mat BioMedical, leveraging a wide array of tools from JavaScript to AWS."
+    />
+    <title>Reza Heidari - Full stack software developer</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PVVW4QD9"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <div id="mouse"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      const mouse = document.getElementById("mouse");
+      document.addEventListener("mousemove", (e) => {
+        mouse.style.top = e.pageY + "px";
+        mouse.style.left = e.pageX + "px";
+      });
+    </script>
   </body>
 </html>
